[package]
name = "open-ended-coevolution"
version = "0.1.0"
authors = ["Torkil <torkil.solheim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustneat = "0.2.1"
draw = "0.3.0"
envconfig_derive = "0.6.0"
envconfig = "0.6.0"
lazy_static = "1.4.0"
queues = "1.0.2"