[package]
name = "open-ended-coevolution"
version = "0.1.0"
authors = ["Torkil <torkil.solheim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.4"
imageproc = "0.19.2"
envconfig_derive = "0.6.0"
envconfig = "0.6.0"
lazy_static = "1.4.0"
queues = "1.0.2"
elapsed = "0.1"
libmath = "0.2.1"
rand = "0.7.3"
libc = "0.2"
azul = { git = "https://github.com/maps4print/azul" }